Fixed security configuration